--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,9 @@ dist
 .tern-port
 .gitsecret/keys/random_seed
 !*.secret
+
+#########################################
+#CUSTOM
+#########################################
+build/
+.vscode
