--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "commonaudiovideoserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run serve",
+    "serve": "node build/src/server.js",
+    "watch-node": "nodemon build/src/server.js",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "serve-debug": "nodemon --inspect build/src/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run check",
+    "eslint-test": "eslint './src/*.ts'",
+    "eslint-fix": "eslint --fix './src/*.ts'",
+    "prettier-test": "prettier --check './src/*.ts'",
+    "prettier-fix": "prettier --write './src/*.ts'",
+    "lint-tests": "npm run eslint-test;npm run prettier-test",
+    "lint-fixes": "npm run eslint-fix;npm run prettier-fix"
   },
   "repository": {
     "type": "git",
@@ -29,10 +40,14 @@
     "@types/express": "^4.17.6",
     "@types/lusca": "^1.6.1",
     "@types/node": "^13.11.1",
+    "concurrently": "^5.2.0",
     "gts": "^2.0.1",
+    "minimist": "^1.2.5",
+    "nodemon": "^2.0.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/mongoose": "^5.7.16",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
