--- a/package.json
+++ b/package.json
@@ -41,20 +41,27 @@
     "@types/lusca": "^1.6.1",
     "@types/node": "^13.11.1",
     "concurrently": "^5.2.0",
+    "ejs": "^3.1.2",
     "gts": "^2.0.1",
     "minimist": "^1.2.5",
     "nodemon": "^2.0.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/gridfs-stream": "^0.5.33",
     "@types/mongoose": "^5.7.16",
+    "@types/multer": "^1.4.3",
+    "@types/multer-gridfs-storage": "^4.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "lusca": "^1.6.1",
     "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.1.0",
     "socket.io": "^2.3.0"
   }
 }
