--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/express": "^4.17.6",
     "@types/lusca": "^1.6.1",
     "@types/node": "^13.11.1",
+    "@types/traverse": "^0.6.32",
     "concurrently": "^5.2.0",
     "ejs": "^3.1.2",
     "gts": "^2.0.1",
@@ -62,6 +63,8 @@
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.1.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "traverse": "^0.6.6",
+    "winston": "^3.2.1"
   }
 }
